--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -332,6 +332,12 @@ Titles:
 <li><a href="../AvengersUltraforce/AvengersUltraforce.html">Avengers/Ultraforce</a>  (1995)
 <li><a href="Marvel89.jpg">Avengers/X-Men: Bloodties</a> (1995)
 <li><a href="Marvel90.jpg">Avengers/X-Men: Maximum Security</a> (2010)
+<li><a href="Marvel116.jpg">Avengers West Coast</a> (2010)
+<li><a href="Marvel117.jpg">Avengers World</a> (2014)
+<li><a href="Marvel118.jpg">Avengers: Above And Beyond</a> (2005)
+<li><a href="Marvel119.jpg">Avengers: Celestial Madonna</a> (2002)
+<li><a href="Marvel120.jpg">Avengers: Citizen Kang</a> (2011)
+<li><a href="Marvel121.jpg">Avengers: The Kree-Skrull War</a> (2000)
 <li><a href="../AVX/AVX.html">AVX: Consequences</a> (2012)
 <li><a href="../BalderTheBrave/BalderTheBrave.html">Balder the Brave</a> (1985)
 <li><a href="../Banner/Banner.html">Banner</a> (2001)
