--- a/index.html
+++ b/index.html
@@ -1283,6 +1283,13 @@
 </tr>
 
 <tr>
+<td>!Gag!</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>#$@&!: The Official Lloyd Llewellyn Collection</td>
 <td>1989</td>
 <td>Fantagraphics</td>
@@ -1923,6 +1930,20 @@
 </tr>
 
 <tr>
+<td>AC Gilbert</td>
+<td>1958</td>
+<td>Publisher</td>
+<td><a href="ACGilbert/ACGilbert.html">Details</a></td>
+</tr>
+
+<tr>
+<td>AC McClurg</td>
+<td>1903</td>
+<td>Publisher</td>
+<td><a href="ACMcClurg/ACMcClurg.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Academic Hour</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -1972,6 +1993,13 @@
 </tr>
 
 <tr>
+<td>Ace</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ace Comics</td>
 <td>1937</td>
 <td>David McKay</td>
@@ -1997,20 +2025,6 @@
 <td>1955</td>
 <td>EC</td>
 <td><a href="Aceshigh/Aceshigh.html">Details</a></td>
-</tr>
-
-<tr>
-<td>AC Gilbert</td>
-<td>1958</td>
-<td>Publisher</td>
-<td><a href="ACGilbert/ACGilbert.html">Details</a></td>
-</tr>
-
-<tr>
-<td>AC McClurg</td>
-<td>1903</td>
-<td>Publisher</td>
-<td><a href="ACMcClurg/ACMcClurg.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9162,6 +9176,13 @@
 </tr>
 
 <tr>
+<td>Bacchus</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bachelor's Diary</td> 
 <td>1949</td>
 <td>Avon</td>
@@ -9921,6 +9942,13 @@
 <td>1986</td>
 <td>Pyramid</td>
 <td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Barbarienne</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13824,6 +13852,13 @@
 </tr>
 
 <tr>
+<td>Book Of Redfox</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bloom County</td>
 <td>2016</td>
 <td>IDW</td>
@@ -15293,6 +15328,13 @@
 </tr>
 
 <tr>
+<td>Brickman</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bride's Diary</td>
 <td>1955</td>
 <td>Farrell</td>
@@ -16154,6 +16196,13 @@
 </tr>
 
 <tr>
+<td>By The Time I Get To Wagga Wagga</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Byron: Mad, Bad, and Dangerous</td>
 <td>2007</td>
 <td>Slave Labor</td>
@@ -16168,7 +16217,7 @@
 </tr>
 
 <tr>
-<td>C&amp;T Graphics</td>
+<td>C &amp; T Graphics</td>
 <td>1987</td>
 <td>Publisher</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
@@ -16921,6 +16970,13 @@
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Oblivion</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20938,6 +20994,34 @@
 </tr>
 
 <tr>
+<td>Conqueror</td>
+<td>1984</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Conqueror Special</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Conqueror Special Preview</td>
+<td>1984</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Conqueror Universe</td>
+<td>1985</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Conquest Press</td>
 <td>1991</td>
 <td>Publisher</td>
@@ -22566,6 +22650,13 @@
 <td>1995</td>
 <td>Rebel</td>
 <td><a href="RebelStudios/RebelStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cuirass</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24626,6 +24717,13 @@
 </tr>
 
 <tr>
+<td>Deadface</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deadface: Doing The Islands With Bacchus</td>
 <td>1991</td>
 <td>Dark Horse</td>
@@ -25099,6 +25197,13 @@
 <td>1991</td>
 <td>DC</td>
 <td><a href="Deathstroke/Deathstroke.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deadwatch</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38509,6 +38614,13 @@
 </tr>
 
 <tr>
+<td>Grun</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grunts</td>
 <td>1987</td>
 <td>Mirage</td>
@@ -39652,6 +39764,13 @@
 <td>Harrier Comics</td>
 <td>1984</td>
 <td>Publisher</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harrier Preview</td>
+<td>1988</td>
+<td>Harrier</td>
 <td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
@@ -46225,6 +46344,13 @@
 <td>2018</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kalgan The Golden</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55873,6 +55999,13 @@
 </tr>
 
 <tr>
+<td>Moon Fighting</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Moon Girl</td>
 <td>1947</td>
 <td>EC</td>
@@ -55989,6 +56122,13 @@
 <td>1963</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>More Tales From Gimbley</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58371,6 +58511,13 @@
 </tr>
 
 <tr>
+<td>Nick Hazard</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nickel Comics</td>
 <td>1940</td>
 <td>Fawcett</td>
@@ -58689,6 +58836,13 @@
 <td>1992</td>
 <td>FantaCo</td>
 <td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Nightbird</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61076,6 +61230,13 @@
 <td>2004</td>
 <td>King Features</td>
 <td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Paris The Man Of Plaster</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65044,6 +65205,20 @@
 </tr>
 
 <tr>
+<td>Redfox</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Redfox Book II: The Demon Queen</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Heat</td>
 <td>1988</td>
 <td>Blackthorne</td>
@@ -68905,6 +69080,13 @@
 </tr>
 
 <tr>
+<td>Second City</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Second Comming</td>
 <td>2019</td>
 <td>AHOY Comics</td>
@@ -69259,6 +69441,13 @@
 <td>2008</td>
 <td>Vertigo</td>
 <td><a href="Sentences/Sentences.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sentinel</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70213,6 +70402,13 @@
 </tr>
 
 <tr>
+<td>Shock Therapy</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shocking Tales Digest</td>
 <td>1981</td>
 <td>Harvey</td>
@@ -70769,6 +70965,13 @@
 <td>2004</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sinister Romance</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71826,6 +72029,13 @@
 <td>1993</td>
 <td>Malibu</td>
 <td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Some Tales From Gimbley</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75105,6 +75315,13 @@
 </tr>
 
 <tr>
+<td>Sunrise</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Super A</td>
 <td>1977</td>
 <td>Warner Books</td>
@@ -75606,6 +75823,20 @@
 <td>2010</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Swiftsure</td>
+<td>1985</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Swiftsure And Conqueror</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -76125,6 +76356,13 @@
 <td>1993</td>
 <td>Fantagor</td>
 <td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales Of The Cyborg Gerbils</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -81157,6 +81395,13 @@
 </tr>
 
 <tr>
+<td>Vignette Comics</td>
+<td>1988</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Viking</td>
 <td>2009</td>
 <td>Image</td>
@@ -82377,6 +82622,13 @@
 <td>2003</td>
 <td>Sparkplug</td>
 <td><a href="SparkplugComics/SparkplugComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Watchcats</td>
+<td>1987</td>
+<td>Harrier</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
 </tr>
 
 <tr>
