--- a/AntarcticPress/AntarcticPress.html
+++ b/AntarcticPress/AntarcticPress.html
@@ -153,6 +153,7 @@
 <div class="mySlides" style="text-align: center;"><img src="AntarcticPress134.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AntarcticPress135.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AntarcticPress136.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AntarcticPress137.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -277,6 +278,7 @@ Titles
 <li><a href="AntarcticPress109.jpg">Land of Oz: the Manga</a> (2008)
 <li><a href="AntarcticPress110.jpg">Last Zombie</a> (1998)
 <li><a href="AntarcticPress111.jpg">Luftwaffe 1946</a> (1996)
+<li><a href="AntarcticPress137.jpg">Mangazine</a> (1985)
 <li><a href="AntarcticPress112.jpg">Metadocs</a> (2005)
 <li><a href="AntarcticPress113.jpg">Mighty Tiny</a> (1989)
 <li><a href="AntarcticPress114.jpg">Nazi Zombies</a> (2012)
