--- a/AtlasComics/AtlasComics.html
+++ b/AtlasComics/AtlasComics.html
@@ -122,6 +122,8 @@ Atlas Comics was the successor of Timely Comics, the company that magazine and p
 <li><a href="../ArizonaKid/ArizonaKid.html">Arizona Kid</a>     (1950)
 <li><a href="../Arrowhead/Arrowhead.html">Arrowhead </a>  (1954)
 <li><a href="../Astonishing/Astonishing.html">Astonishing</a>     (1951)
+<li><a href="Atlas1.jpg">Bible Tales For Young Folks</a> (1953)
+<li><a href="Atlas2.jpg">Billy Buckskin</a> (1955)
 <li><a href="../AllWinners/AllWinners.html">Black Rider</a> (1948)
 <li><a href="../BuckDuck/BuckDuck.html">Buck Duck</a> (1993)
 <li><a href="../Combat/Combat.html">Combat</a>  (1952)
