--- a/EpicComics/EpicComics.html
+++ b/EpicComics/EpicComics.html
@@ -151,6 +151,7 @@ Titles
 <li><a href="../AtomicAge/AtomicAge.html">Atomic Age</a> (1985)
 <li><a href="Epic3.jpg">Black Dragon</a> (1985)
 <li><a href="../BloodATale/BloodATale.html">Blood: A Tale</a> (1988)
+<li><a href="Epic31.jpg">Bloodlines: A Tale From The Heart Of Africa</a> (1992)
 <li><a href="../Blueberry/Blueberry.html">Blueberry</a> (1989)
 <li><a href="../BozzChronicles/BozzChronicles.html">Bozz Chronicles</a> (1985)
 <li><a href="../BratsBizarre/BratsBizarre.html">Brats Bizarre</a> (1994)
