--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -337,29 +337,64 @@ Titles:
 <li><a href="Marvel118.jpg">Avengers: Above And Beyond</a> (2005)
 <li><a href="Marvel119.jpg">Avengers: Celestial Madonna</a> (2002)
 <li><a href="Marvel120.jpg">Avengers: Citizen Kang</a> (2011)
+<li><a href="Marvel122.jpg">Avengers: The Initiative</a> (2007)
 <li><a href="Marvel121.jpg">Avengers: The Kree-Skrull War</a> (2000)
 <li><a href="../AVX/AVX.html">AVX: Consequences</a> (2012)
+<li><a href="Marvel123.jpg">Awful Oscar</a> (1949)
+<li><a href="Marvel124.jpg">Axis: Carnage</a> (2014)
+<li><a href="../CraptacularBSides/CraptacularBSides.html">B-Sides</a>  (2002)
 <li><a href="../BalderTheBrave/BalderTheBrave.html">Balder the Brave</a> (1985)
 <li><a href="../Banner/Banner.html">Banner</a> (2001)
+<li><a href="Marvel125.jpg">Barbie</a>  (1991)
+<li><a href="Marvel126.jpg">Barbie Fashion</a>  (1991)
+<li><a href="Marvel127.jpg">Battle</a>  (1951)
+<li><a href="Marvel128.jpg">Battle Action</a>  (1952)
+<li><a href="Marvel129.jpg">Battle Brady</a>  (1953)
 <li><a href="../BattleScars/BattleScars.html">Battle Scars</a> (2012)
+<li><a href="Marvel130.jpg">Battlefield</a>  (1952)
+<li><a href="Marvel131.jpg">Battlefront</a>  (1952)
+<li><a href="Marvel132.jpg">Battleground</a>  (1954)
+<li><a href="../BattlestarGalactica/BattlestarGalactica.html">Battlestar Galactica</a>
 <li><a href="../Battletide/Battletide.html">Battletide</a>  (1992)
 <li><a href="../BattletideII/BattletideII.html">Battletide II</a> (1993)
 <li><a href="../Beast/Beast.html">Beast</a> (1997)
 <li><a href="../BeautyAndTheBeast/BeautyAndTheBeast.html">Beauty And The Beast</a>   (1984)
+<li><a href="Marvel133.jpg">Beavis &amp; Butt-Head</a>  (1994)
 <li><a href="../BeforeFantasticFour/BeforeFantasticFour.html">Before the Fantastic 4: Grimm and Logan</a> (2000)
+<li><a href="Marvel134.jpg">Ben Reilly: The Scarlet Spider</a>  (2017)
+<li><a href="Marvel135.jpg">Best Of Marvel</a>  (1994)
+<li><a href="Marvel136.jpg">Best Of Spider-Man</a>  (2003)
+<li><a href="Marvel137.jpg">Best Of Wolverine</a>  (2004)
+<li><a href="Marvel138.jpg">Best Western</a>  (1949)
+<li><a href="Marvel139.jpg">Best-Selling Authors Sampler</a>  (2008)
+<li><a href="Marvel140.jpg">Beta Ray Bill: Godhunter</a>  (2009)
+<li><a href="Marvel141.jpg">Beware</a>  (1973)
+<li><a href="Marvel142.jpg">Beyond!</a>  (2006)
+<li><a href="Marvel143.jpg">Big Hero 6</a>  (2008)
+<li><a href="Marvel144.jpg">Big Thunder Mountain Railroad</a>  (2015)
+<li><a href="Marvel145.jpg">Big Town</a>  (2001)
 <li><a href="../BikerMiceMars/BikerMiceMars.html">Biker Mice from Mars</a>    (1993)
+<li><a href="Marvel146.jpg">Bill &amp; Ted's Bogus Journey</a>  (1991)
+<li><a href="Marvel147.jpg">Bill &amp; Ted's Excellent Comic Book</a>  (1991)
+<li><a href="Marvel148.jpg">Billy Ray Cyrus</a> (1995)
+<li><a href="Marvel149.jpg">Billy The Marlin</a> (1996)
 <li><a href="../Bishop/Bishop.html">Bishop</a>  (1994)
 <li><a href="../BizarreAdventures/BizarreAdventures.html">Bizarre Adventures</a>  (1981)
+<li><a href="Marvel150.jpg">Black Axe</a> (1993)
 <li><a href="../BlackBolt/BlackBolt.html">Black Bolt</a>  (2017)
 <li><a href="Marvel3.jpg">Black Cat</a> (2019) 
+<li><a href="Marvel151.jpg">Black Eyed Peas Masters Of The Sun</a> (2017)
 <li><a href="../BlackGoliath/BlackGoliath.html">Black Goliath</a>   (1976)
 <li><a href="../BlackKnight/BlackKnight.html">Black Knight</a>    (2016)
+<li><a href="Marvel152.jpg">Black Order</a> (2019)
 <li><a href="../BlackPanther/BlackPanther.html">Black Panther</a>   (1977)
 <li><a href="Marvel4.jpg">Black Panther</a> (2018) 
 <li><a href="Marvel5.jpg">Black Panther and the Agents of Wakanda</a> (2019) 
+<li><a href="Marvel153.jpg">Black September</a> (1995)
 <li><a href="../BlackWidow/BlackWidow.html">Black Widow</a> (1999)
 <li><a href="../Blackwulf/Blackwulf.html">Blackwulf</a> (1994)
 <li><a href="../Blade/Blade.html">Blade</a> (1973)
+<li><a href="../BladeRunner/BladeRunner.html">Blade Runner</a> (1982)
 <li><a href="../Blaze/Blaze.html">Blaze</a> (1994)
 <li><a href="../Gunhawk/Gunhawk.html">Blaze Carson</a> (1948)
 <li><a href="../BlazeOfGlory/BlazeOfGlory.html">Blaze of Glory</a>  (2000)
@@ -369,7 +404,8 @@ Titles:
 <li><a href="../Bloodstone/Bloodstone.html">Bloodstone</a>  (2001)
 <li><a href="../Blueberry/Blueberry.html">Blueberry</a>  (1989)
 <li><a href="../BobMarley/BobMarley.html">Bob Marley, Tale of the Tuff Gong</a> (1994)
-<li><a href="../BookOfTheDead/BookOfTheDead.html">Book of the Dead</a>  (1993)
+<li><a href="../BookOfTheDead/BookOfTheDead.html">Book Of The Dead</a> (1993)
+<li><a href="Marvel154.jpg">Books Of Doom</a> (2006)
 <li><a href="../BrandEchh/BrandEchh.html">Brand Echh</a>  (1967)
 <li><a href="../Brotherhood/Brotherhood.html">Brotherhood</a> (2001)
 <li><a href="../BruteForce/BruteForce.html">Brute Force</a> (1990)
