--- a/index.html
+++ b/index.html
@@ -10576,6 +10576,13 @@
 
 <tr>
 <td>Battlestar Galactica</td>
+<td>1979</td>
+<td>Marvel</td>
+<td><a href="BattlestarGalacticaMarvel/BattlestarGalacticaMarvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battlestar Galactica</td>
 <td>1995</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -53674,6 +53681,13 @@
 <td>1993</td>
 <td>Fleetway Quality</td>
 <td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Max Comics</td>
+<td>2001</td>
+<td>Publisher</td>
+<td><a href="Max/Max.html">Details</a></td>
 </tr>
 
 <tr>
