--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -406,11 +406,14 @@ Titles:
 <li><a href="../BobMarley/BobMarley.html">Bob Marley, Tale of the Tuff Gong</a> (1994)
 <li><a href="../BookOfTheDead/BookOfTheDead.html">Book Of The Dead</a> (1993)
 <li><a href="Marvel154.jpg">Books Of Doom</a> (2006)
+<li><a href="Marvel155.jpg">Boys' Ranch</a> (1992)
 <li><a href="../BrandEchh/BrandEchh.html">Brand Echh</a>  (1967)
 <li><a href="../Brotherhood/Brotherhood.html">Brotherhood</a> (2001)
 <li><a href="../BruteForce/BruteForce.html">Brute Force</a> (1990)
+<li><a href="Marvel156.jpg">Bug</a> (1997)
 <li><a href="../BulletPoints/BulletPoints.html">Bullet Points</a> (2007)
 <li><a href="../Bullseye/Bullseye.html">Bullseye: Greatest Hits</a> (2004)
+<li><a href="Marvel157.jpg">Buzz</a> (2000)
 <li><a href="../Cable/Cable.html">Cable</a> (1993)
 <li><a href="../CableAndDeadpool/CableAndDeadpool.html">Cable and Deadpool</a> (2004)
 <li><a href="../CableAndXForce/CableAndXForce.html">Cable and X-Force</a> (2012)
@@ -422,7 +425,7 @@ Titles:
 <li><a href="../CaptainBritain/CaptainBritain.html">Captain Britain</a> (1976)
 <li><a href="../CaptainJustice/CaptainJustice.html">Captain Justice</a> (1988)
 <li><a href="../CaptainMarvel/CaptainMarvel.html">Captain Marvel</a> (1968)
-<li><a href="Marvel7.jpg">Captain Marvel</a> (2019)
+<li><a href="Marvel158.jpg">Captain Marvel</a> (2000)
 <li><a href="../CaptMarvelCarolCorps/CaptMarvelCarolCorps.html">Captain Marvel and the Carol Corps</a> (2015)
 <li><a href="../CaptainPlanet/CaptainPlanet.html">Captain Planet and the Planeteers</a>   (1991)
 <li><a href="../CaptainUniverse/CaptainUniverse.html">Captain Universe</a> (2006)
@@ -430,6 +433,7 @@ Titles:
 <li><a href="../Cat/Cat.html">Cat</a> (1972)
 <li><a href="../ChamberOfDarkness/ChamberOfDarkness.html">Chamber of Darkness</a>   (1969)
 <li><a href="../Champions/Champions.html">Champions</a> (1975)
+<li><a href="Marvel159.jpg">Cheap Trick Busted!</a> (1990)
 <li><a href="../ChildrenVoyager/ChildrenVoyager.html">Children of the Voyager</a>   (1993)
 <li><a href="../Chili/Chili.html">Chili</a> (1969)
 <li><a href="../ChuckNorris/ChuckNorris.html">Chuck Norris</a> (1987)
@@ -442,16 +446,27 @@ Titles:
 <li><a href="../Spitfire/Spitfire.html">Code Name: Spitfire</a> (2010)
 <li><a href="../CodeOfHonor/CodeOfHonor.html">Code of Honor</a> (1997)
 <li><a href="../Genetix/Genetix.html">Codename Genetix</a> (1993)
+<li><a href="Marvel160.jpg">Colossus</a> (1997)
+<li><a href="Marvel161.jpg">Colossus: God's Country</a> (1994)
 <li><a href="../CometMan/CometMan.html">Comet Man</a> (1987)
 <li><a href="../CompleteComics/CompleteComics.html">Complete Comics</a>   (1944)
+<li><a href="Marvel167.jpg">Complete Frank Miller Spider-Man</a>   (1994)
 <li><a href="../CompleteMystery/CompleteMystery.html">Complete Mystery</a>    (1948)
+<li><a href="Marvel162.jpg">Conan</a> (1995)
+<li><a href="Marvel168.jpg">Conan 2099</a> (2020)
+<li><a href="Marvel163.jpg">Conan The Adventurer</a> (1994)
 <li><a href="../ConanTheBarbarian/ConanTheBarbarian.html">Conan The Barbarian</a>     (1970)
-<li><a href="Marvel8.jpg">Conan the Barbarian</a> (2019)
+<li><a href="Marvel8.jpg">Conan The Barbarian</a> (2019)
+<li><a href="Marvel164.jpg">Conan The Savage</a> (1995)
+<li><a href="Marvel165.jpg">Conan Vs. Rune</a> (1995)
+<li><a href="Marvel166.jpg">Conan: Return of Styrm</a> (1998)
 <li><a href="../Coneheads/Coneheads.html">Coneheads</a> (1994)
 <li><a href="../Conspiracy/Conspiracy.html">Conspiracy</a>  (1998)
+<li><a href="Marvel169.jpg">Contagion</a> (2019)
 <li><a href="../ContestOfChampions/ContestOfChampions.html">Contest of Champions </a> (1982)
 <li><a href="../ContestOfChampionsII/ContestOfChampionsII.html">Contest of Champions II     (1999)
 <li><a href="../CopsTheJob/CopsTheJob.html">Cops: The Job</a> (1992)
+<li><a href="Marvel170.jpg">Cosmic Ghost Rider</a> (2018)
 <li><a href="../CosmicPowers/CosmicPowers.html">Cosmic Powers</a> (1994)
 <li><a href="../CosmicPowersUnlimited/CosmicPowersUnlimited.html">Cosmic Powers Unlimited</a> (1995)
 <li><a href="../CountDuckula/CountDuckula.html">Count Duckula</a> (1988)
@@ -461,22 +476,36 @@ Titles:
 <li><a href="../Crazy/Crazy.html">Crazy Magazine</a> (1973)
 <li><a href="../CreaturesOnTheLoose/CreaturesOnTheLoose.html">Creatures on the Loose</a>  (1971)
 <li><a href="../Crew/Crew.html">Crew</a> (2003)
+<li><a href="Marvel171.jpg">Crime Can't Win</a> (1950)
+<li><a href="Marvel172.jpg">Crime Cases</a> (1950)
 <li><a href="../CrimeExposed/CrimeExposed.html">Crime Exposed</a> (1948)
 <li><a href="../CrimeFighters/CrimeFighters.html">Crime Fighters</a>  (1948)
 <li><a href="../CryptOfShadows/CryptOfShadows.html">Crypt of Shadows</a> (1973)
 <li><a href="../Crystar/Crystar.html">Crystar</a> (1983)
 <li><a href="../Cupid/Cupid.html">Cupid</a> (1949)
 <li><a href="../CurseOfTheWeird/CurseOfTheWeird.html">Curse of the Weird</a> (1993)
+<li><a href="Marvel173.jpg">Cutting Edge</a> (1995)
 <li><a href="../Cyberspace3000/Cyberspace3000.html">Cyberspace 3000</a> (1993)
+<li><a href="Marvel174.jpg">Cyblade/Ghost Rider</a> (1997)
+<li><a href="Marvel175.jpg">Cyclops</a> (2001)
+<li><a href="Marvel176.jpg">Cyclops: Retribution</a> (1994)
 <li><a href="../DP7/DP7.html">D.P.7</a> (1986)
+<li><a href="Marvel177.jpg">Daffodil</a> (2010)
 <li><a href="../DailyBugle/DailyBugle.html">Daily Bugle</a>  (1996)
+<li><a href="Marvel179.jpg">Daken: Dark Wolverine</a> (2010)
+<li><a href="Marvel178.jpg">Daken/X-23: Collision</a> (2011)
 <li><a href="../DakotaNorth/DakotaNorth.html">Dakota North</a> (1986)
 <li><a href="../DamageControl/DamageControl.html">Damage Control</a>  (1989)
+<li><a href="Marvel180.jpg">Damnation: Ghost Rider</a> (2018)
 <li><a href="../DancesWithDemons/DancesWithDemons.html">Dances with Demons</a>  (1993)
-<li><a href="../Daredevil/Daredevil.html">Daredevil</a>   (1964)
+<li><a href="../Daredevil/Daredevil.html">Daredevil</a> (1964)
 <li><a href="Marvel9.jpg">Daredevil</a> (2019)
 <li><a href="../DaredevilBornAgain/DaredevilBornAgain.html">Daredevil Born Again</a> (1986)
 <li><a href="../DaredevilVsVapora/DaredevilVsVapora.html">Daredevil vs. Vapora</a>  (1993)
+<li><a href="Marvel181.jpg">Daredevil/Batman</a> (1997)
+<li><a href="Marvel182.jpg">Daredevil/Black Widow: Abattoir</a> (1993)
+<li><a href="Marvel182.jpg">Daredevil/Deadpool</a> (1997)
+<li><a href="Marvel183.jpg">Daredevil/Elektra: Love And War</a> (2003)
 <li><a href="../Daredevils/Daredevils.html">Daredevils</a> (1982)
 <li><a href="../Daring/Daring.html">Daring Comics</a> (1940)
 <li><a href="../Daring/Daring.html">Daring Mystery Comics</a> (1940)
