--- a/index.html
+++ b/index.html
@@ -11281,6 +11281,13 @@
 </tr>
 
 <tr>
+<td>Bernie Krigstein</td>
+<td>1919</td>
+<td>Creator</td>
+<td><a href="BernieKrigstein/BernieKrigstein.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Berserker</td>
 <td>2009</td>
 <td>Image</td>
