--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -567,6 +567,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Abyss/abyss.html">Abyss</a>   (1989)
 <li><a href="../AccidentMan/accidentman.html">Accident Man</a>   (1993)
 <li><a href="../Achewood/Achewood.html">Achewood</a> (2001)
+<li><a href="../ActionsSpeak/ActionsSpeak.html">Actions Speak</a> (2001)
 <li><a href="../Adam3/adam3.html">Adam.3</a> (2015)
 <li><a href="Darkhorse358.jpg">Adrenalynn: Weapon Of War</a> (2001)
 <li><a href="Darkhorse359.jpg">Adventures Into The Unknown</a> (2012)
@@ -741,6 +742,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse393.jpg">Bob Powell's Complete Jet Powers</a> (2015)
 <li><a href="Darkhorse394.jpg">Boba Fett: Salvage</a> (1997)
 <li><a href="Darkhorse60.jpg">Body Bags</a> (1996)
+<li><a href="../Boogeyman/Boogeyman.html">Boogeyman by Sergio Aragones</a> (1998)
 <li><a href="Darkhorse395.jpg">Book Of Grickle</a> (1997)
 <li><a href="Darkhorse61.jpg">Book Of Night</a> (1987)
 <li><a href="Darkhorse396.jpg">Borgias</a> (2014)
