--- a/SergioAragones/SergioAragones.html
+++ b/SergioAragones/SergioAragones.html
@@ -29,6 +29,15 @@
 <div class="mySlides" style="text-align: center;"><img src="SergioAragones09.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SergioAragones10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SergioAragones11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SergioAragonesMassacresMarvel/SergioAragonesMassacresMarvel.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SergioAragones18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WarnerBooks/WarnerBooks68.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -42,9 +51,25 @@ In 1992 he became the first Mexican ever to win the Eisner Award for his work on
 </p><p>
 In 2009, an exhibition, Mad About Sergio, was held at the Ojai Valley Museum. Visitors saw examples of his cartooning dating back to childhood, publications he has appeared in, some of his awards, and Marginal-style sketches by Aragonés literally drawn onto the museum's walls and display cases.
 </p><p>
-Stan Lee interviewed Aragones in the documentary series The Comic Book Greats.
+Stan Lee interviewed Aragones in the documentary series The Comic Book Greats. The Comic Art Professional Society award's prize's name is "The Sergio", an homage to his work.
 </p><p>
-The Comic Art Professional Society award's prize's name is "The Sergio", an homage to his work.
+<li><a href="../WarnerBooks/WarnerBooks.html">Mad: Sergio Aragones Mad As The Devil!</a> (1975)
+<li><a href="../WarnerBooks/WarnerBooks.html">Mad: Sergio Aragones's Mad Marginals!</a> (1980)
+<li><a href="../WarnerBooks/WarnerBooks.html">Mad: Sergio Aragones Mad As A Hatter!</a> (1981)
+<li><a href="../WarnerBooks/WarnerBooks.html">Mad: Sergio Aragones On Parade</a> (1982)
+<li><a href="../Groo/Groo.html">Groo</a> (1982)
+<li><a href="../WarnerBooks/WarnerBooks.html">Mad: Sergio Aragones Mad Menagerie</a> (1983)
+<li><a href="../Marvel/Marvel.html">Sergio Aragones Massacres Marvel</a> (1996)
+<li><a href="SergioAragones14.jpg">Sergio Aragonés Destroys DC</a> (1996)
+<li><a href="../Boogeyman/Boogeyman.html">Boogeyman</a> (1998)
+<li><a href="SergioAragones16.jpg">Sergio Aragonés' Dia De Los Muertos</a> (1998)
+<li><a href="../LouderThanWords/LouderThanWords.html">Sergio Aragonés Louder Than Words</a> (1998)
+<li><a href="SergioAragones18.jpg">Fanboy</a> (1999)
+<li><a href="SergioAragones15.jpg">Sergio Aragonés' Blair Which?</a> (1999)
+<li><a href="../DarkHorse/DarkHorse.html">Sergio Aragonés Stomps Star Wars</a> (2000)
+<li><a href="../ActionsSpeak/ActionsSpeak.html">Sergio Aragonés Actions Speak</a> (2001)
+<li><a href="SergioAragones17.jpg">Mad's Greatest Artists: Sergio Aragonès</a> (2010)
+<li><a href="../SergioAragonesFunnies/SergioAragonesFunnies.html">Sergio Aragones Funnies</a> (2011)
 </p>
 
 </body>
