--- a/index.html
+++ b/index.html
@@ -14390,6 +14390,13 @@
 </tr>
 
 <tr>
+<td>Boogeyman</td>
+<td>1998</td>
+<td>Darkhorse</td>
+<td><a href="Boogeyman/Boogeyman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Boogie Man: Chinatoon</td>
 <td>1993</td>
 <td>Tundra</td>
@@ -51807,15 +51814,15 @@
 </tr>
 
 <tr>
-<td>Mad: Sergio Aragones Mad Menagerie</td>
-<td>1983</td>
+<td>Mad: Sergio Aragones Mad Marginals!</td>
+<td>1980</td>
 <td>Warner Books</td>
 <td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Mad: Sergio Aragones's Mad Marginals!</td>
-<td>1980</td>
+<td>Mad: Sergio Aragones Mad Menagerie</td>
+<td>1983</td>
 <td>Warner Books</td>
 <td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
 </tr>
@@ -69609,6 +69616,48 @@
 <td>1937</td>
 <td>Creator</td>
 <td><a href="SergioAragones/SergioAragones.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergio Aragones Actions Speak</td>
+<td>2001</td>
+<td>Dark Horse</td>
+<td><a href="ActionsSpeak/ActionsSpeak.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergio Aragones Blair Which?</td>
+<td>1999</td>
+<td>Dark Horse</td>
+<td><a href="SergioAragones/SergioAragones.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergio Aragones Boogeyman</td>
+<td>1999</td>
+<td>Dark Horse</td>
+<td><a href="Boogeyman/Boogeyman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergio Aragones Destroys DC</td>
+<td>1996</td>
+<td>DC</td>
+<td><a href="SergioAragones/SergioAragones.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergio Aragones Funnies</td>
+<td>2011</td>
+<td>Bongo</td>
+<td><a href="SergioAragonesFunnies/SergioAragonesFunnies.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergio Aragones Louder Than Words</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="LouderThanWords/LouderThanWords.html">Details</a></td>
 </tr>
 
 <tr>
