--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -213,6 +213,11 @@
 <div class="mySlides" style="text-align: center;"><img src="Marvel192.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel193.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Marvel194.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel195.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel196.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel197.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel198.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Marvel199.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -618,16 +623,21 @@ Titles:
 <li><a href="Marvel194.jpg">Deadpool: Bad Blood</a> (2017)
 <li><a href="../DeathMetal/DeathMetal.html">Death Metal</a> (1994)
 <li><a href="../DeathMetalVsGenetix/DeathMetalVsGenetix.html">Death Metal vs. Genetix</a> (1993)
+<li><a href="Marvel195.jpg">Death Of Wolverine</a> (2014)
+<li><a href="Marvel196.jpg">Death Of X</a> (2016)
 <li><a href="../DeathWreck/DeathWreck.html">Death Wreck</a> (1994)
 <li><a href="../DeathsHead/DeathsHead.html">Death's Head</a> (1988)
 <li><a href="../Death3/Death3.html">Death3</a>  (1993)
 <li><a href="../Deathlok/Deathlok.html">Deathlok</a> (1991)
+<li><a href="Marvel197.jpg">Deep</a> (1977)
+<li><a href="../Defenders/Defenders.html">Defenders</a> (1972)
+<li><a href="Marvel198.jpg">Defenders Epic Collection</a> (2016)
 <li><a href="../DefendersOfDynatronCity/DefendersOfDynatronCity.html">Defenders of Dynatron City</a> (1992)
 <li><a href="../DefendersOfTheEarth/DefendersOfTheEarth.html">Defenders of the Earth</a> (1987)
-<li><a href="../Defenders/Defenders.html">Defenders</a> (1972)
 <li><a href="../DellaVision/DellaVision.html">Della Vision</a> (1955)
 <li><a href="../Destroyer/Destroyer.html">Destroyer</a> (2009)
 <li><a href="../DevilDinosaur/DevilDinosaur.html">Devil Dinosaur</a> (1978)
+<li><a href="Marvel199.jpg">Dexter</a> (2013)
 <li><a href="../DieCut/DieCut.html">Die-Cut</a> (1993)
 <li><a href="../DieCutVsGForce/DieCutVsGForce.html">Die-Cut vs. G-Force</a> (1993)
 <li><a href="../Digitek/Digitek.html">Digitek</a> (1992)
