--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -364,6 +364,7 @@ Titles
 <li><a href="Fantagraphics137.jpg">Worn Tuff Elbow</a> (2004)
 <li><a href="Fantagraphics135.jpg">Wuvable Oaf</a> (2015)
 <li><a href="../JoeSacco/JoeSacco.html">Yahoo</a> (1988)
+<li><a href="Fantagraphics148.jpg">You'll Never Know</a> (2009)
 <li><a href="../Zap/zap.html">Zap</a> (2016)
 <li><a href="Fantagraphics136.jpg">Zero Zero</a> (1995)
 <li><a href="Fantagraphics142.jpg">Zoot!</a> (1995)
