--- a/SexCriminals/SexCriminals.html
+++ b/SexCriminals/SexCriminals.html
@@ -34,6 +34,9 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+31 issues starting in 2013 published by Image Comics, won Eisner and Harvey awards for best new series in 2014. Written by Matt Fraction and illustrated by Chip Zdarsky.
+</p><p>
+Suzie, a librarian, and Jon, an actor, meet at a party and, after sleeping together, they discover that they share the ability to freeze time when they orgasm. As their relationship develops and their sexual histories are explored, they decide to rob the bank where Jon works in order to save Suzie's endangered library. 
 </p>
 </body>
 </html>
