--- a/index.html
+++ b/index.html
@@ -7580,6 +7580,13 @@
 </tr>
 
 <tr>
+<td>Art Spiegelman</td>
+<td>1948</td>
+<td>Creator</td>
+<td><a href="ArtSpiegelman/ArtSpiegelman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Artbabe</td>
 <td>1997</td>
 <td>Fantagraphics</td>
@@ -15787,6 +15794,13 @@
 <td>1986</td>
 <td>Continuity</td>
 <td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bud Fisher</td>
+<td>1885</td>
+<td>Creator</td>
+<td><a href="BudFisher/BudFisher.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36192,6 +36206,13 @@
 </tr>
 
 <tr>
+<td>George Herriman</td>
+<td>1880</td>
+<td>Creator</td>
+<td><a href="GeorgeHerriman/GeorgeHerriman.html">Details</a>
+</tr>
+
+<tr>
 <td>George Pal's Puppetoons</td>
 <td>1945</td>
 <td>Fawcett</td>
@@ -51198,6 +51219,13 @@
 </tr>
 
 <tr>
+<td>Lyonel Feininger</td>
+<td>1871</td>
+<td>Creator</td>
+<td><a href="LyonelFeininger/LyonelFeininger.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lynx</td>
 <td>2015</td>
 <td>Awakened</td>
@@ -57053,6 +57081,13 @@
 <td>2002</td>
 <td>Marvel</td>
 <td><a href="Muties/Muties.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mutt &amp; Jeff</td>
+<td>1910</td>
+<td>Bud Fisher</td>
+<td><a href="BudFisher/BudFisher.html">Details</a></td>
 </tr>
 
 <tr>
